--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
                 <div class="course-detail">
                     <h3 class="course-title">React - The Complete Guide 2022</h3>
-                    <p class="course author">Reed Krakoff.</p>
+                    <p class="course-author">Reed Krakoff.</p>
                     <div class="course-info">
                         <div>
                             <i class="fa-solid fa-star filled"></i>
@@ -134,7 +134,7 @@
                 </div>
                 <div class="course-detail">
                     <h3 class="course-title">Powerpoint 2020 Master Powerpoint Course</h3>
-                    <p class="course author">Walter Scott</p>
+                    <p class="course-author">Walter Scott</p>
                     <div class="course-info">
                         <div>
                             <i class="fa-solid fa-star filled"></i>
@@ -158,7 +158,7 @@
                 </div>
                 <div class="course-detail">
                     <h3 class="course-title">The Complete JavaScript Course 2020</h3>
-                    <p class="course author">Reed Krakoff.</p>
+                    <p class="course-author">Reed Krakoff.</p>
                     <div class="course-info">
                         <div>
                             <i class="fa-solid fa-star filled"></i>
